--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     background-color: #f4f4f4;
     font-family: Arial, sans-serif;
-    margin: 50px; /* Margem padrão adicionada aqui */
+    margin: 50px;
 }
 
 /* Container principal */
